mobile: portfolio -> navbar small-wide screens overflow fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -89,7 +89,7 @@ a {
 
 #navbar li {
     display: inline-block;
-    padding: 20px;
+    padding: 20px 2vw;
     font-size: max(1.8vw, 20px);
 }
 
